--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.2.0",
+    "@netlify/neon": "^0.1.0",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "next": "15.3.4",
